# djangoExp

./: README.md  local.yml  pyproject.toml  pytest.ini  setup.cfg
.envs/: .local
requirements/: base.txt  no-docker-local.txt
src/: conftest.py  db.sqlite3
src/addresses/: admin.py  apps.py  choices.py  models.py  permissions.py  services.py
src/channels/: admin.py  choices.py  models.py  permissions.py  services.py
src/clients/: admin.py  choices.py  models.py  permissions.py  services.py
src/commissions/: admin.py  apps.py  choices.py  models.py  permissions.py  services.py
src/common/: choices.py  client.py  export.py  guardian.py  importer.py  mixins.py  pagination.py  services.py
src/config/: api.py  asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
src/contacts/: admin.py  apps.py  choices.py  models.py  permissions.py  services.py
src/contracts/: admin.py  apps.py  choices.py  models.py  permissions.py  services.py
src/cookiecutter_template/: cookiecutter.json
src/costs/: admin.py  apps.py  choices.py  models.py  permissions.py  services.py
src/energy_costs/: admin.py  apps.py  choices.py  constants.py  models.py  permissions.py  services.py
src/invoices/: admin.py  apps.py  choices.py  models.py  permissions.py  services.py
src/margins/: admin.py  apps.py  choices.py  models.py  permissions.py  services.py
src/marketers/: admin.py  apps.py  choices.py  importer.py  models.py  permissions.py  services.py
src/rate_types/: admin.py  apps.py  choices.py  models.py  permissions.py  services.py
src/rates/: admin.py  choices.py  (+4 more)
(+320 files in other folders)
